--- a/src/index.ejs
+++ b/src/index.ejs
@@ -14,7 +14,9 @@
   <body>
 
     <div id="title_bar">
-		<div id="drag_area"></div>
+		<div id="drag_area">
+				&nbsp;&nbsp;Pictionary
+		</div>
         <ul>
             <li id="minimise_btn" onclick="theWindow.minimize();">
 				<i class="fas fa-window-minimize"></i> <!--Minimise icon-->
